// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switchButtonField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_m5izgx2 uv_m5izgx0 uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
        style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
      >
        <div
          class="uv_m5izgx4 uv_m5izgx3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto; --uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
            style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
          >
            <div
              aria-disabled="false"
              class="uv_475tndd uv_17da2jl2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="uv_17da2jl6"
                id="_r_2_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="uv_17da2jl7"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_17da2jl9"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_17da2jl8"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                for="_r_2_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="uv_m5izgx4 uv_m5izgx3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto; --uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
            style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
          >
            <div
              aria-disabled="false"
              class="uv_475tndd uv_17da2jl2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="uv_17da2jl6"
                id="_r_6_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="uv_17da2jl7"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_17da2jl9"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_17da2jl8"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                for="_r_6_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`switchButtonField > should works with defaultValues 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_m5izgx2 uv_m5izgx0 uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
        style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
      >
        <div
          class="uv_m5izgx4 uv_m5izgx3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto; --uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
            style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
          >
            <div
              aria-disabled="false"
              class="uv_475tndd uv_17da2jl2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="uv_17da2jl6"
                id="_r_b_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="uv_17da2jl7"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_17da2jl9"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_17da2jl8"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                for="_r_b_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="uv_m5izgx4 uv_m5izgx3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto; --uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
            style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
          >
            <div
              aria-disabled="false"
              class="uv_475tndd uv_17da2jl2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="uv_17da2jl6"
                id="_r_f_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="uv_17da2jl7"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_17da2jl9"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_17da2jl8"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                for="_r_f_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
      ,
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoei uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
